p1.2 (In Progress)
=================
* New : add capability to create a white/gray(customisable)/black board.
* New : add toolbarheight adjustments in option dialog (was already in config files)
* New : add new dialog for pen definition with colorpicker
* New : add pen adjustment dialog access on pen buttons through long click
* New : add option to apply defined pen width at selection even if pen width cab be modified
--->RC1
* New option:to engage capture when opening the toolbar
* Alt+ capability added for temporary comman 
* report changes from gInk 1.1 (see commits)
* various fixes (see commits)
* add --startInking argument to start inking immediately

p1.1 (RC3 @Aug. 16,2020)
=================
--->RC3 and before (see readme.md)
* renamed to ppInk
* add rect/oval/arrow/line/text/numbers tools
* add filling options
* add magnet effect
* prevent multiple instances and allow starting argument
* add floating icon


v1.0.9 (Apr. 3, 2020)
=================
- Better handling of UI layout for multiple displays of unmatched DPI.
- Fix a rare crash which occurs at startup due to path problem. 

v1.0.8 (Mar. 25, 2020)
=================
- Jump to the snapshot file when clicking the Windows tip balloon after taking a snapshot.
- Less CPU usage when dragging to take a snapshot.
- Fix a rare crash which occurs upon selecting eraser.
- Fix a rare crash which occurs at startup due to the language folder not found.
- Russian language.

v1.0.7 (Feb. 8, 2020)
=================
- French language.
- Italian language.

v1.0.6 (Feb. 2, 2020)
=================
- German language.
- Traditional Chinese language.

v1.0.5 (Dec. 24, 2019)
=================
- Slightly reduce the size of canvas to unblock mouse interaction with hidden (as well as non-hidden) windows taskbar.
- Polish language. 
- Czech language.

v1.0.4 (Nov. 1, 2019)
=================
- Portuguese language.

v1.0.3 (Oct. 19, 2019)
=================
- Fix a hotkey bug.

v1.0.2 (Oct. 18, 2019)
=================